updated matlab_resources.tex and pdf for 2016-17 academic year links

--- a/matlab_resources.tex
+++ b/matlab_resources.tex
@@ -12,12 +12,12 @@
 \usecolortheme{crane}
 \author[Prashant Meckoni]{Prashant Meckoni}
 \title[MATLAB Resources]{MATLAB Resources for Engineers}
-\subtitle[v 0.1]{v 0.1}
+\subtitle[v 1.0]{v 1.0}
 %\setbeamercovered{transparent} 
 %\setbeamertemplate{navigation symbols}{} 
 %\logo{} 
 \institute[UMass Amherst]{Mechanical \& Industrial Engineering, \\University of Massachusetts, Amherst } 
-\date{February 25, 2016}
+\date{updated February 22, 2017}
 %\subject{MIE 397} 
 \begin{document}
 
@@ -39,7 +39,7 @@ In my opinion, the best answer is available at\\ \url{http://stackoverflow.com/a
 \end{frame}
 \begin{frame}{Software}
 \begin{itemize}
-\item MATLAB Subscription available to UMass students at No Cost: Sept 2015: Windows, Mac, Linux \url{http://www.it.umass.edu/news/2015-09-02/matlab-subscription-now-available-students-no-cost} 
+        \item MATLAB Subscription available to UMass students at No Cost: 2016: Windows, Mac, Linux \url{http://www.umass.edu/it/software/matlab-2016}
 \item University computers have MATLAB installed.
 \item MATLAB can be used from the Virtual Lab remotely from your own computer. Windows, Mac, Linux\\ \url{https://engineering.umass.edu/about-us/engineering-computer-services/virtual-lab}
 \item GNU Octave is free alternative to MATLAB with exactly same syntax to allow portability. Windows, Mac, Linux \url{http://www.gnu.org/software/octave/} 
